# cpp-stratego-themadsquirrels

./: .gitignore
sdl-example/: CMakeLists.txt  SDLTest.cpp  SDLTest.h  Texture.cpp  Texture.h  main.cpp  sdl_setup_readme.txt
stratego/: CMakeLists.txt  FindSDL2IMAGE.cmake
stratego/include/: ClickActionType.h  Clickable.h  Game.h  GameState.h  Piece.h  PieceType.h  PieceTypes.h  Player.h  PlayerColor.h  PlayerMove.h  Renderable.h  Resources.h  Selection.h  Texture.h  strategoTypes.h
stratego/include/renderable/: Piece.h  Player.h  Renderable.h  Selection.h
stratego/include/renderable/clickable/: Button.h  ClickActionType.h  Clickable.h  Menu.h
stratego/include/renderable/clickable/displayMatrix/: Board.h  DisplayMatrix.h  PieceContainer.h
stratego/src/: Clickable.cpp  Game.cpp  Piece.cpp  Player.cpp  PlayerMove.cpp  Renderable.cpp  Resources.cpp  Selection.cpp  Texture.cpp  main.cpp
stratego/src/renderable/: Piece.cpp  Player.cpp  Renderable.cpp  Selection.cpp
stratego/src/renderable/clickable/: Button.cpp  Clickable.cpp  Menu.cpp
stratego/src/renderable/clickable/displayMatrix/: Board.cpp  DisplayMatrix.cpp  PieceContainer.cpp
